crates/config/src/snapshots/config__theme_file__tests__a_strict_parse_rejects_what_it_does_not_recognise@invalid_hex_value.snap
---
source: crates/config/src/theme_file.rs
expression: error.to_string()
---
invalid color `#zzzzzz`: expected 6 hex digits as #rrggbb
noir.toml:3
