crates/config/src/snapshots/config__theme_file__tests__a_strict_parse_rejects_what_it_does_not_recognise@unknown_color_key.snap
---
source: crates/config/src/theme_file.rs
expression: error.to_string()
---
unknown field `selection_background`, expected one of `background`, `muted_foreground`, `foreground`, `accent`, `green`, `yellow`, `red`, `window_background`
noir.toml:10
