crates/config/src/snapshots/config__theme_file__tests__a_strict_parse_rejects_what_it_does_not_recognise@unknown_top_level_key.snap
---
source: crates/config/src/theme_file.rs
expression: error.to_string()
---
unknown field `bogus`, expected one of `name`, `colors`, `scanning_label`
noir.toml:2
