crates/config/src/snapshots/config__theme_file__tests__every_repo_theme_parses@gruvbox.snap
---
source: crates/config/src/theme_file.rs
assertion_line: 93
expression: "parse_theme(source, name).unwrap()"
---
ThemeFile {
    name: "gruvbox",
    colors: ThemeColors {
        background: Rgb(
            [
                40,
                40,
                40,
            ],
        ),
        foreground: Rgb(
            [
                146,
                131,
                116,
            ],
        ),
        bright_foreground: Rgb(
            [
                235,
                219,
                178,
            ],
        ),
        accent: Rgb(
            [
                254,
                128,
                25,
            ],
        ),
        green: Rgb(
            [
                184,
                187,
                38,
            ],
        ),
        yellow: Rgb(
            [
                250,
                189,
                47,
            ],
        ),
        red: Rgb(
            [
                251,
                73,
                52,
            ],
        ),
        window_background: Some(
            Rgb(
                [
                    50,
                    48,
                    47,
                ],
            ),
        ),
    },
    scanning_label: "scanning…",
}
