crates/config/src/snapshots/config__theme_file__tests__every_repo_theme_parses@macaroon.snap
---
source: crates/config/src/theme_file.rs
assertion_line: 93
expression: "parse_theme(source, name).unwrap()"
---
TomlTheme {
    name: ThemeName(
        "macaroon",
    ),
    colors: TomlColors {
        background: Rgb(
            [
                216,
                208,
                200,
            ],
        ),
        muted_foreground: Rgb(
            [
                122,
                122,
                122,
            ],
        ),
        foreground: Rgb(
            [
                26,
                26,
                26,
            ],
        ),
        accent: Rgb(
            [
                42,
                168,
                160,
            ],
        ),
        green: Rgb(
            [
                42,
                168,
                160,
            ],
        ),
        yellow: Rgb(
            [
                232,
                196,
                106,
            ],
        ),
        red: Rgb(
            [
                232,
                122,
                144,
            ],
        ),
        window_background: None,
    },
    scanning_label: "scanning…",
}
