crates/config/src/snapshots/config__theme_file__tests__every_repo_theme_parses@neobrutalism-light.snap
---
source: crates/config/src/theme_file.rs
assertion_line: 93
expression: "parse_theme(source, name).unwrap()"
---
TomlTheme {
    name: ThemeName(
        "neobrutalism-light",
    ),
    colors: TomlColors {
        background: Rgb(
            [
                254,
                246,
                228,
            ],
        ),
        muted_foreground: Rgb(
            [
                74,
                74,
                74,
            ],
        ),
        foreground: Rgb(
            [
                17,
                17,
                17,
            ],
        ),
        accent: Rgb(
            [
                255,
                144,
                232,
            ],
        ),
        green: Rgb(
            [
                35,
                160,
                148,
            ],
        ),
        yellow: Rgb(
            [
                255,
                201,
                0,
            ],
        ),
        red: Rgb(
            [
                255,
                92,
                92,
            ],
        ),
        window_background: None,
    },
    scanning_label: "scanning…",
}
