crates/config/src/snapshots/config__theme_file__tests__every_repo_theme_parses@noir.snap
---
source: crates/config/src/theme_file.rs
assertion_line: 93
expression: "parse_theme(source, name).unwrap()"
---
ThemeFile {
    name: "noir",
    colors: ThemeColors {
        background: Rgb(
            [
                10,
                12,
                16,
            ],
        ),
        foreground: Rgb(
            [
                107,
                114,
                128,
            ],
        ),
        bright_foreground: Rgb(
            [
                216,
                221,
                230,
            ],
        ),
        accent: Rgb(
            [
                217,
                119,
                87,
            ],
        ),
        green: Rgb(
            [
                107,
                114,
                128,
            ],
        ),
        yellow: Rgb(
            [
                217,
                119,
                87,
            ],
        ),
        red: Rgb(
            [
                242,
                168,
                120,
            ],
        ),
        window_background: None,
    },
    scanning_label: "scanning…",
}
