crates/config/src/snapshots/config__theme_file__tests__every_repo_theme_parses@oreo.snap
---
source: crates/config/src/theme_file.rs
assertion_line: 93
expression: "parse_theme(source, name).unwrap()"
---
TomlTheme {
    name: ThemeName(
        "oreo",
    ),
    colors: TomlColors {
        background: Rgb(
            [
                11,
                11,
                11,
            ],
        ),
        foreground: Rgb(
            [
                143,
                138,
                128,
            ],
        ),
        bright_foreground: Rgb(
            [
                245,
                241,
                232,
            ],
        ),
        accent: Rgb(
            [
                243,
                233,
                210,
            ],
        ),
        green: Rgb(
            [
                245,
                241,
                232,
            ],
        ),
        yellow: Rgb(
            [
                201,
                194,
                180,
            ],
        ),
        red: Rgb(
            [
                143,
                138,
                128,
            ],
        ),
        window_background: None,
    },
    scanning_label: "scanning…",
}
